# ProjektRI

./: README.md
location_package/: CMakeLists.txt  package.xml  setup.py
location_package/action/: ExecuteMission.action
location_package/location_package/: coordinate_logger.py  goal_executor.py
tcp_client_package/tcp_client_package/: tcp_client_node.py
